# Trustline

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  implementation_task.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  trustline-audit.yml
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  STABILITY.md  acme-demo.md  architecture.md  contract-spec.md  contributing.md  engineering-foundation.md  getting-started.md  index.md  mvp-scope.md  review-checklist.md  roadmap.md  triage.md  use-cases.md  why-trustline.md
docs/adr/: 001-snowflake-first.md  002-yaml-contracts.md  003-cli-first.md  004-apache-license.md  005-scorecard-phases.md  006-synthetic-acme-demo.md  009-module-layout.md  010-cli-package-structure.md  011-example-contract-path.md  012-uv-toolchain.md  013-ruff-lint-format.md  014-mypy-types.md  015-dco-without-cla.md  016-pypi-package-name.md  017-scaffold-version.md  018-coverage-threshold.md  019-v01-audit-profile.md  021-contract-diff-governance.md  022-trustline-init.md  README.md
docs/patterns/: README.md  cohort-freeze.md  identity-funnel-collapse.md  queue-vs-state.md  source-swap.md  training-serving-divergence.md
examples/acme_stream/: audit_profile.yaml  demo.duckdb  profiles.yml.example
examples/acme_stream/contracts/: propensity_training_cohort_q2.yaml  training_positives.yaml
examples/acme_stream/sql/: seed_data.sql
examples/dbt-ci/: README.md  validate-contracts.yml
examples/github-actions/trustline-audit/: README.md  workflow.yml
examples/templates/: README.md
integrations/github-actions/: trustline-audit.yml
schemas/: audit_profile.schema.json  cohort.schema.json  common.schema.json  funnel.schema.json
scripts/: bootstrap.sh  build-demo-duckdb.sh  check-docs-publishing.sh
src/trustline/: __init__.py  config.py  examples.py  exceptions.py
src/trustline/cli/: __init__.py  audit.py  hints.py  init_cmd.py  main.py  validate.py
src/trustline/compiler/: __init__.py  audit_profile.py  cohort.py  funnel.py  paths.py  templates.py
src/trustline/contracts/: __init__.py  audit_profile.py  loader.py  models.py  schemas.py  validator.py
src/trustline/executors/: __init__.py  base.py  duckdb.py  snowflake.py
src/trustline/init/: __init__.py  scaffold.py
src/trustline/integrations/: __init__.py  slack.py
src/trustline/reporters/: __init__.py  brief.py  json_report.py  markdown.py  redact.py  rich_console.py  scoring.py
src/trustline/scorecard/: __init__.py  _common.py  orchestrator.py  phase1_pipeline.py  phase2_funnel.py  phase3_semantics.py  phase4_training.py  phase5_brief.py  types.py
src/trustline/templates/: presets.py  render.py
src/trustline/templates/contracts/: audit_profile_ml_crm.yaml  cohort_source_parity.yaml  funnel_retention.yaml  profiles.yml.template
templates/sql/: cohort_positive_rate.sql.j2  cohort_source_parity.sql.j2  crm_coverage_gap.sql.j2  funnel_retention.sql.j2  funnel_stage_count.sql.j2  funnel_stage_join.sql.j2  score_distribution.sql.j2  source_swap_volume.sql.j2
tests/: conftest.py  test_cli.py  test_cli_stubs.py  test_exceptions.py  test_version.py  test_version_fallback.py
tests/e2e/: test_acme_audit.py
tests/fixtures/: acme_funnel_mock_results.json
tests/fixtures/invalid_contracts/: bad_retention.yaml  missing_metadata.yaml  wrong_kind.yaml
tests/fixtures/profiles/: missing_schema.yml  valid_profiles.yml
tests/fixtures/sql_snapshots/: acme_cohort_source_parity.sql  acme_funnel_source_donors_count.sql
tests/integration/: test_snowflake_executor.py
tests/unit/: test_examples.py
tests/unit/cli/: test_audit.py  test_init.py  test_validate.py  test_validate_errors.py
tests/unit/compiler/: test_audit_profile.py  test_cohort.py  test_funnel.py  test_templates.py
tests/unit/config/: test_profiles.py
tests/unit/contracts/: test_loader.py  test_loader_extra.py  test_models.py  test_validator.py  test_validator_extra.py  test_yaml_normalization.py
tests/unit/executors/: test_base.py  test_duckdb.py  test_snowflake.py
tests/unit/integrations/: test_slack.py
tests/unit/reporters/: test_json_report.py  test_markdown.py  test_redact.py  test_rich_console.py  test_scoring.py
tests/unit/scorecard/: fake_executor.py  test_common.py  test_orchestrator.py  test_phase1_pipeline.py  test_phase2_funnel.py  test_phase3_semantics.py  test_phase4_training.py  test_phase5_brief.py
tests/unit/templates/: test_contract_templates.py  test_render.py
