[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustline"
version = "0.0.1"
description = "Open-source trust layer for data products — machine-checkable contracts across ETL, ML, and delivery seams."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Omar Farooq" }]
keywords = ["data-quality", "mlops", "data-contracts", "dbt", "snowflake"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "pyyaml>=6.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
trustline = "trustline.cli.main:app"

[project.urls]
Homepage = "https://github.com/omarfarooq908/trustline"
Documentation = "https://github.com/omarfarooq908/trustline/tree/main/docs"
Repository = "https://github.com/omarfarooq908/trustline"
Issues = "https://github.com/omarfarooq908/trustline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trustline"]

[tool.hatch.build.targets.sdist]
include = ["src/trustline", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["trustline"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["trustline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring warehouse credentials (deselect with '-m \"not integration\"')",
]
addopts = "-ra"

[tool.coverage.run]
source = ["trustline"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["tests"]
