[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustline"
version = "0.2.0"
description = "Compiler for business invariants across data-product boundaries."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Omar Farooq" }]
keywords = ["data-quality", "mlops", "data-contracts", "dbt", "snowflake"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.0.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.0"]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "types-jsonschema>=4.23.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
trustline = "trustline.cli.main:app"

[project.urls]
Homepage = "https://github.com/omarfarooq908/trustline"
Documentation = "https://github.com/omarfarooq908/trustline/tree/main/docs"
Repository = "https://github.com/omarfarooq908/trustline"
Issues = "https://github.com/omarfarooq908/trustline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trustline"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "trustline/schemas"
"templates/sql" = "trustline/templates/sql"
"examples/acme_stream" = "trustline/examples/acme_stream"

[tool.hatch.build.targets.sdist]
include = [
    "src/trustline",
    "schemas",
    "templates/sql",
    "examples/acme_stream",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["trustline", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["trustline"]

[[tool.mypy.overrides]]
module = ["snowflake", "snowflake.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests requiring warehouse credentials (deselect with '-m \"not integration\"')",
]
addopts = "-ra"

[tool.coverage.run]
source = ["trustline"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["tests"]
